@@ -1254,7 +1254,7 @@ server.3=zoo3:2888:3888</pre>
 <term>fsync.warningthresholdms</term>
 </dt>
 <dd>
-<p>(Java system property: <strong>fsync.warningthresholdms</strong>)</p>
+<p>(Java system property: <strong>zookeeper.fsync.warningthresholdms</strong>)</p>
 <p>
 <strong>New in 3.3.4:</strong> A
                warning message will be output to the log whenever an
